# write-to-monitor

./: .gitignore  .gitmodules  CLAUDE.md  CMakeLists.txt  README.md  config.env  context_dump.md  debug_plan.md
docs/: API.md  BUILD.md  GUI_OPTIONS.md
include/: config_parser.h  http_api_server.h  monitor_control.h  thread_safe_control.h
src/: config_parser.cpp  http_api_server.cpp  monitor_control.cpp  monitor_control_gui.cpp  thread_safe_control.cpp  writeValueToDisplay.cpp
